Fix list spacing

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -223,6 +223,11 @@ p,
 
 li {
   margin-bottom: 0.5rem;
+
+  & > ol,
+  & > ul {
+    margin-top: 0.5rem;
+  }
 }
 
 .bg-trueblack {
